k8s/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: qboxcoreweb 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: qboxcoreweb 
    spec:
      containers:
        - name: qboxcoreweb 
          image: techdays.azurecr.io/qboxcoreweb 
          ports:
          - containerPort: 80

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: techdays.azurecr.io/qboxcoreapi
        ports:
        - containerPort: 80     

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux:2017-CU9
        ports:
        - containerPort: 1433
