k8s/frontend-pod.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend30
spec:
  replicas: 2
#  minReadySeconds: 10
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: qbox
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: jakob.azurecr.io/qboxcoreweb:2.0
        ports:
        - containerPort: 80
#        readinessProbe:
#          httpGet:
#            path: /api/health
#            port: 80
#          initialDelaySeconds: 3
#          periodSeconds: 3
      imagePullSecrets:
      - name: regsecret
