k8s/highscore-notification.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: highscore-notification
spec:
  selector:
    matchLabels:
      app: highscore-notification
  replicas: 10
  template:
    metadata:
      labels:
        app: highscore-notification  
    spec:
      containers:
      - name: qboxcorehighscorenotifications
        image: techdays.azurecr.io/qboxcorehighscorenotification
      imagePullSecrets:
      - name: acr-auth

      nodeSelector:
        kubernetes.io/role: agent
        beta.kubernetes.io/os: linux
        type: virtual-kubelet
        
      tolerations:
      - key: virtual-kubelet.io/provider
        operator: Exists
      - key: azure.com/aci
        effect: NoSchedule
