k8s/qbox-frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: jakob.azurecr.io/qboxcoreweb:1.0    
        ports:
        - containerPort: 80
