k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: qbox
      tier: backend
  template:
    metadata:
      labels:
        app: qbox
        tier: backend
    spec:
      containers:
      - name: backend
        image: jakob.azurecr.io/qboxcoreapi:2.2.44
        ports:
        - containerPort: 80
     
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: qbox
spec:
  selector:
    app: qbox
    tier: backend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
