k8s/db.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
spec:
  template:
    metadata:
      labels:
        tier: db
    spec:
      containers:
      - name: db
        image: microsoft/mssql-server-linux:2017-CU9
        ports:
        - containerPort: 1433   
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    tier: db
  ports:
    - protocol: TCP
      port: 1433
  type: ClusterIP
