k8s/qbox-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: jakobregistry.azurecr.io/qboxcoreapi:1.0
        ports:
        - containerPort: 80
