k8s/qbox-db.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux:2017-CU9
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
  type: ClusterIP
