k8s/qbox-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
