k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: qboxcoreweb
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: qboxcoreweb

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    tier: backend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
  type: ClusterIP
