k8s/qbox-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qbox
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: qbox.d634ee0d60a346fe8385.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
