k8s/qbox-tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qbox-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - qbox-aks.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: qbox-aks.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: backend
          servicePort: 80
